--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
+asgiref==3.3.1
+boto3==1.16.59
+botocore==1.19.59
+certifi==2020.12.5
+chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.1.5
-django_phonenumber_field==5.0.0
-django-shortcuts
+django-cleanup==5.1.0
+django-on-heroku==1.1.2
+django-phonenumber-field==5.0.0
+django-shortcuts==1.6
+django-storages==1.11.1
+docopt==0.6.2
+gunicorn==20.0.4
+idna==2.10
+jmespath==0.10.0
+phonenumbers==8.12.16
+Pillow==8.1.0
+pipreqs==0.4.10
+psycopg2-binary==2.8.6
+python-dateutil==2.8.1
+pytz==2020.5
+requests==2.25.1
+s3transfer==0.3.4
+six==1.15.0
+sqlparse==0.4.1
+urllib3==1.26.2
+whitenoise==5.2.0
+yarg==0.1.9
